--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -2,9 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>课程类型列表</title>
+    <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
 </head>
 <body>
+<div id="header"></div>
+<div style="height: 80px"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-right"><button>新增</button></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">操作</div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">新增 删除 </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">新增 删除 </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">新增 删除 </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">新增 删除 </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-5">名字</div>
+                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-3">新增 删除 </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 
+<script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Scripts/Admin/CourseTypeList.js"></script>
 </body>
 </html>
