--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -1,1 +1,36 @@
-<div>heater</div>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example-navbar-collapse">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <!--<img class="pull-left" style="padding: 5px;" src="../Images/nlqlogo.png" height="50" width="50"/>-->
+            <a class="navbar-brand" href="#">在线选课系统</a>
+        </div>
+        <div class="collapse navbar-collapse" id="example-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/Course/Views/Admin/Course/CourseList.html">课程管理</a></li>
+                <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
+                <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        关于我们 <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">联系方式</a></li>
+                        <li><a href="#">在线客服</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">公司简介</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">注销登录</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
