--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -19,43 +19,43 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
+                        <div class="col-xs-4">亲子课程</div>
                         <div class="col-xs-3">操作</div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
-                        <div class="col-xs-3">新增 删除 </div>
+                        <div class="col-xs-5">名字1</div>
+                        <div class="col-xs-4">家长课程</div>
+                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
-                        <div class="col-xs-3">新增 删除 </div>
+                        <div class="col-xs-5">名字2</div>
+                        <div class="col-xs-4">学生课程</div>
+                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
-                        <div class="col-xs-3">新增 删除 </div>
+                        <div class="col-xs-5">名字3</div>
+                        <div class="col-xs-4">学生课程</div>
+                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
-                        <div class="col-xs-3">新增 删除 </div>
+                        <div class="col-xs-5">名字4</div>
+                        <div class="col-xs-4">家长课程</div>
+                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">类型</div>
-                        <div class="col-xs-3">新增 删除 </div>
+                        <div class="col-xs-5">名字5</div>
+                        <div class="col-xs-4">学生课程</div>
+                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
             </ul>
