--- a/Views/Admin/CourseType/CourseTypeEdit.html
+++ b/Views/Admin/CourseType/CourseTypeEdit.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>新增/编辑课程类型</title>
+    <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
+
 </head>
 <body>
 <div id="header"></div>
+
+
+<script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Scripts/Admin/CourseTypeEdit.js"></script>
 </body>
 </html>
