--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -5,57 +5,47 @@
     <title>课程类型列表</title>
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
+    <style>
+        button {
+            width: 60px;
+            height: 30px
+        }
+        select{
+            height: 40px;
+            border: 1px solid #dddddd;
+            border-radius: 5px;
+            width: 100%;
+            padding-left: 5px;
+            padding-right: 5px;
+            outline: none;
+        }
+        .header {
+            background: #efefef;
+            font-size: 15px;
+        }
+    </style>
 </head>
 <body>
 <div id="header"></div>
 <div style="height: 80px"></div>
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 text-right"><button>新增</button></div>
+    <div class="row" style="padding: 10px;background: #e5e5e5">
+        <div class="col-xs-6 text-left">
+            <h4><strong>课程类型管理</strong></h4>
+        </div>
+        <div class="col-xs-6 text-right">
+            <button id="btnAdd">新 增</button>
+        </div>
     </div>
-    <div class="row">
+    <div class="row" style="padding: 10px;background: #e5e5e5">
         <div class="col-xs-12">
             <ul class="list-group">
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字</div>
-                        <div class="col-xs-4">亲子课程</div>
+                <li class="list-group-item header">
+                    <div class="row ">
+                        <div class="col-xs-5">课程类型名称</div>
+                        <div class="col-xs-4">类型</div>
                         <div class="col-xs-3">操作</div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字1</div>
-                        <div class="col-xs-4">家长课程</div>
-                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字2</div>
-                        <div class="col-xs-4">学生课程</div>
-                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字3</div>
-                        <div class="col-xs-4">学生课程</div>
-                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字4</div>
-                        <div class="col-xs-4">家长课程</div>
-                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-5">名字5</div>
-                        <div class="col-xs-4">学生课程</div>
-                        <div class="col-xs-3"><button>新增</button> <button>删除</button> </div>
                     </div>
                 </li>
             </ul>
@@ -63,8 +53,30 @@
     </div>
 </div>
 
+<div id="EditBox" style="display: none;">
+    <div class="container" style="width: 500px;margin-top: 20px;">
+        <div class="row">
+            <div class="col-xs-4">课程类型名称：</div>
+            <div class="col-xs-8"><input type="text" id="CourseTypeName"/></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">类型：</div>
+            <div class="col-xs-8"><select type="text" id="CourseType_Type">
+                <option value="1">学生课程</option>
+                <option value="2">家长课程</option>
+                <option value="3">亲子课程</option>
+            </select></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-9"></div>
+            <div class="col-xs-3"><button style="width: 100%">保 存</button></div>
+        </div>
+    </div>
+</div>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Scripts/Admin/CourseTypeList.js"></script>
 </body>
 </html>
