--- a/Css/Account/Login.css
+++ b/Css/Account/Login.css
@@ -4,15 +4,11 @@ body{
 .container {
     margin-top: 50px !important;
 }
-
-.row {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
+.border_btm{
+    border-bottom: 1px solid #eeeeee;}
 input {
     height: 40px;
-    border: 1px solid #dddddd;
+    border: 1px solid #eeeeee;
     border-radius: 5px;
     width: 100%;
     padding-left: 5px;
@@ -21,7 +17,7 @@ input {
 }
 
 input:focus {
-    border: 1px solid #00b38a;;
+    border: 1px solid #F24C4C;;
 }
 
 #btnLogin {
@@ -29,19 +25,19 @@ input:focus {
     border: none;
     border-radius: 5px;
     color: #ffffff;
-    background-color: #00b38a;
+    background-color: #F24C4C;
     height: 40px;
 }
 
 ::selection {
-    background:#00b38a;
+    background:#F24C4C;
     color:#fff;
 }
 ::-moz-selection {
-    background:#00b38a;
+    background:#F24C4C;
     color:#fff;
 }
 ::-webkit-selection {
-    background:#00b38a;
+    background:#F24C4C;
     color:#fff;
 }
