--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -9,32 +9,67 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../Css/Account/Login.css">
+    <style>
+        .pl5 {
+            padding-left: 5px
+        }
+
+        .pr5 {
+            padding-right: 5px
+        }
+
+        .pl15 {
+            padding-left: 15px;
+        }
+
+        .pr15 {
+            padding-right: 15px;
+        }
+
+        .pdtb10 {
+             padding-top: 10px;
+             padding-bottom: 10px;
+         }
+        .pdtb15 {
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+
+        .display_block {
+            display: block
+        }
+        a{
+            color: #000;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <div class="row text-center">
-        <h4><strong>请登录</strong></h4>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <span class="pdtb10 display_block">手机号：</span></div>
+        <div class="col-xs-9 pr15 pl5">
+            <input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>
     </div>
-    <div class="row">
-        <div class="col-xs-12">用户名：</div>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <sapn class="pdtb10 display_block">密码：</sapn>
+        </div>
+        <div class="col-xs-9 pr15 pl5">
+            <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
     </div>
-    <div class="row">
-        <div class="col-xs-12"><input type="text" id="UserName" name="UserName" placeholder="请输入用户名/手机号"/></div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">密码：</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12"><input type="password" id="Pwd" name="Pwd" placeholder="请输入密码"/></div>
-    </div>
-    <div class="row">
+    <div class="row pdtb15">
         <div class="col-xs-12 text-right">
             <button id="btnLogin">登 录</button>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 text-center">
-            Copyright©摩英教育2006~2016 版权所有
+        <div class="col-xs-6">
+            <a href="Register.html">注册账号</a>
+        </div>
+        <div class="col-xs-6 text-right">
+            <a href="Login.html">忘记密码？</a>
         </div>
     </div>
 </div>
