--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -11,7 +11,8 @@
             width: 60px;
             height: 30px
         }
-        select{
+
+        select {
             height: 40px;
             border: 1px solid #dddddd;
             border-radius: 5px;
@@ -20,6 +21,7 @@
             padding-right: 5px;
             outline: none;
         }
+
         .header {
             background: #efefef;
             font-size: 15px;
@@ -40,7 +42,7 @@
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
         <div class="col-xs-12">
-            <ul class="list-group">
+            <ul class="list-group" id="courseType_list">
                 <li class="list-group-item header">
                     <div class="row ">
                         <div class="col-xs-5">课程类型名称</div>
@@ -69,10 +71,32 @@
         </div>
         <div class="row">
             <div class="col-xs-9"></div>
-            <div class="col-xs-3"><button style="width: 100%">保 存</button></div>
+            <div class="col-xs-3">
+                <button id="btnSave" style="width: 100%">保 存</button>
+            </div>
         </div>
     </div>
 </div>
+<!--<div class="container">-->
+    <!--<div class="row" style="padding: 10px;background: #e5e5e5">-->
+        <!--<div class="col-xs-12">-->
+            <!--<ul class="list-group">-->
+                <!--<li class="list-group-item">-->
+                    <!--<div class="row ">-->
+                        <!--<div class="col-xs-3"><img style="height: 60px;width: 60px" src="../../../Images/banner/banner01.png"/></div>-->
+                        <!--<div class="col-xs-9">类型</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li class="list-group-item">-->
+                    <!--<div class="row ">-->
+                        <!--<div class="col-xs-3"><img style="height: 60px;width: 60px" src="../../../Images/banner/banner01.png"/></div>-->
+                        <!--<div class="col-xs-9">类型</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
