--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>注册</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="email=no"/>
+    <title>注册账号</title>
+    <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../Css/Account/Login.css">
+    <style>
+        .pl5 {
+            padding-left: 5px
+        }
+
+        .pr5 {
+            padding-right: 5px
+        }
+
+        .pl15 {
+            padding-left: 15px;
+        }
+
+        .pr15 {
+            padding-right: 15px;
+        }
+
+        .pdtb10 {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        .pdtb15 {
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+
+        .display_block {
+            display: block
+        }
+
+        a {
+            color: #000;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <span class="pdtb10 display_block">手机号：</span></div>
+        <div class="col-xs-9 pr15 pl5">
+            <input type="text" id="Phone" name="Phone" placeholder="请输入手机号码"/></div>
+    </div>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <span class="pdtb10 display_block">验证码：</span></div>
+        <div class="col-xs-5 pr15 pl5">
+            <input type="text" id="VerificationCode" name="UserName" placeholder="请输入验证码"/></div>
+        <div class="col-xs-4 pr15 pl5">
+            <button id="btnSendSMS">发送验证码</button>
+        </div>
+    </div>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <sapn class="pdtb10 display_block">密码：</sapn>
+        </div>
+        <div class="col-xs-9 pr15 pl5">
+            <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
+    </div>
+    <div class="row pdtb15">
+        <div class="col-xs-12 text-right">
+            <button id="btnReg">注 册</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-6">
+        </div>
+        <div class="col-xs-6 text-right">
+            <a href="Login.html">已有账号登录》</a>
+        </div>
+    </div>
+</div>
 
+<script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Account/Register.js"></script>
 </body>
 </html>
