--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -16,17 +16,18 @@
                 <li class="active"><a href="/Course/Views/Admin/Course/CourseList.html">课程管理</a></li>
                 <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
                 <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        关于我们 <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">联系方式</a></li>
-                        <li><a href="#">在线客服</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">公司简介</a></li>
-                    </ul>
-                </li>
+                <!--<li><a href="/Course/Views/Admin/User/UserList.html">教师管理</a></li>-->
+                <!--<li class="dropdown">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--关于我们 <b class="caret"></b>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">联系方式</a></li>-->
+                        <!--<li><a href="#">在线客服</a></li>-->
+                        <!--<li class="divider"></li>-->
+                        <!--<li><a href="#">公司简介</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">注销登录</a></li>
