--- a/Views/Admin/Course/CourseEdit.html
+++ b/Views/Admin/Course/CourseEdit.html
@@ -3,8 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <title>新增/编辑--课程</title>
+    <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../Framework/summernote/summernote.css">
+    <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
+    <link href="../../../Framework/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+    <style>
+        button {
+            width: 70px;
+            height: 30px
+        }
+
+        select {
+            height: 40px;
+            border: 1px solid #dddddd;
+            border-radius: 5px;
+            width: 100%;
+            padding-left: 5px;
+            padding-right: 5px;
+            outline: none;
+        }
+
+        .header {
+            background: #efefef;
+            font-size: 15px;
+        }
+
+        .kv-main button {
+            width: 90px;
+        }
+
+        .file-footer-buttons button {
+            width: 15px;
+            height: 15px;
+            border: none;
+        }
+
+        .file-drop-zone-title {
+            font-size: 14px;
+            padding: 35px 10px;
+        }
+    </style>
 </head>
 <body>
-dsadsadsa
+<div id="header"></div>
+<div style="height: 80px"></div>
+<div class="container" style="margin-top: 20px;">
+    <div class="row">
+        <div class="col-xs-2">课程名称：</div>
+        <div class="col-xs-6"><input type="text" id="CourseName"/></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">类型：</div>
+        <div class="col-xs-6">
+            <select type="text" id="CourseType">
+                <option value="1">学生课程</option>
+                <option value="2">家长课程</option>
+            </select>
+        </div>
+    </div>
+    <!--<div class="row">-->
+    <!--<div class="col-xs-2">人数上限：</div>-->
+    <!--<div class="col-xs-6"><input type="text" id="CurrentPeople"/></div>-->
+    <!--</div>-->
+    <div class="row">
+        <div class="col-xs-2">学费：</div>
+        <div class="col-xs-6"><input type="text" id="Tuition"/></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">课程介绍：</div>
+        <div class="col-xs-8">
+            <div id="summernote">
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">课程图片：</div>
+        <div class="col-xs-5">
+            <div id="imgbox"></div>
+            <div class="kv-main">
+                <br>
+                <form enctype="multipart/form-data">
+                    <div class="form-group">
+                        <input id="file-Portrait" type="file" multiple class="file" data-overwrite-initial="false"
+                               data-min-file-count="1">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">
+
+        </div>
+        <div class="col-xs-3">
+            <button id="btnSave" style="width: 150px;height: 40px;">保 存</button>
+        </div>
+    </div>
+</div>
+<div style="height: 300px;width: 100%"></div>
+<script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../../Framework/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+<script src="../../../Framework/bootstrap-fileinput/js/fileinput_locale_zh.js"></script>
+<script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../../Framework/summernote/summernote.min.js"></script>
+<script src="../../../Framework/summernote/lang/summernote-zh-CN.js"></script>
+<script src="../../../Scripts/Admin/CourseEdit.js"></script>
 </body>
 </html>
