课程阶段列表等

--- a/Views/Admin/Course/CourseEdit.html
+++ b/Views/Admin/Course/CourseEdit.html
@@ -106,6 +106,7 @@
 <script src="../../../Framework/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script src="../../../Framework/bootstrap-fileinput/js/fileinput_locale_zh.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/summernote/summernote.min.js"></script>
 <script src="../../../Framework/summernote/lang/summernote-zh-CN.js"></script>
