添加个人中心,修改密码,忘记密码页面

--- a/Views/Account/ChangePassword.html
+++ b/Views/Account/ChangePassword.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="email=no"/>
-    <title>登录</title>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../Css/Account/Login.css">
+    <title>修改密码</title>
     <style>
         .pl5 {
             padding-left: 5px
@@ -21,64 +21,54 @@
         .pl15 {
             padding-left: 15px;
         }
-
         .pr15 {
             padding-right: 15px;
         }
-
-        .pdtb10 {
-             padding-top: 10px;
-             padding-bottom: 10px;
-         }
-        .pdtb15 {
-            padding-top: 15px;
-            padding-bottom: 15px;
+        .border_btm {
+            border-bottom: 1px solid #eeeeee;
         }
-
+        .pdtb10 {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
         .display_block {
             display: block
         }
-        a{
-            color: #000;
-            text-decoration: none;
+        #changePwd {
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            color: #ffffff;
+            background-color: #F24C4C;
+            height: 40px;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <div class="row pdtb15 border_btm">
+    <div class="row pdtb10 border_btm">
         <div class="col-xs-3 pl15 pr5">
-            <span class="pdtb10 display_block">手机号：</span></div>
+            <span class="pdtb10 display_block">原密码</span></div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>
+            <input type="password" id="oldPwd" placeholder="请输入原密码"/></div>
     </div>
-    <div class="row pdtb15 border_btm">
+    <div class="row pdtb10 border_btm">
         <div class="col-xs-3 pl15 pr5">
-            <sapn class="pdtb10 display_block">密码：</sapn>
-        </div>
+            <span class="pdtb10 display_block">新密码</span></div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
+            <input type="password" id="newPwd" placeholder="请输入新的密码"/></div>
     </div>
     <div class="row pdtb15">
-        <div class="col-xs-12 text-right">
-            <button id="btnLogin">登 录</button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-6">
-            <a href="Register.html">注册账号</a>
-        </div>
-        <div class="col-xs-6 text-right">
-            <a href="RetrievePassword.html">忘记密码？</a>
+        <div class="pdtb10 col-xs-12 text-right">
+            <button id="changePwd">修改密码</button>
         </div>
     </div>
 </div>
-
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
-<script src="../../Scripts/Login.js"></script>
+<script src="../../Scripts/Account/ChangePassword.js"></script>
 </body>
 </html>
