--- a/Views/Account/RetrievePassword.html
+++ b/Views/Account/RetrievePassword.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="email=no"/>
-    <title>登录</title>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../Css/Account/Login.css">
+    <title>找回密码</title>
     <style>
         .pl5 {
             padding-left: 5px
@@ -27,9 +27,10 @@
         }
 
         .pdtb10 {
-             padding-top: 10px;
-             padding-bottom: 10px;
-         }
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
         .pdtb15 {
             padding-top: 15px;
             padding-bottom: 15px;
@@ -38,7 +39,8 @@
         .display_block {
             display: block
         }
-        a{
+
+        a {
             color: #000;
             text-decoration: none;
         }
@@ -50,26 +52,34 @@
         <div class="col-xs-3 pl15 pr5">
             <span class="pdtb10 display_block">手机号：</span></div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>
+            <input type="text" id="Phone" name="Phone" placeholder="请输入手机号码"/></div>
     </div>
     <div class="row pdtb15 border_btm">
         <div class="col-xs-3 pl15 pr5">
-            <sapn class="pdtb10 display_block">密码：</sapn>
+            <span class="pdtb10 display_block">验证码：</span></div>
+        <div class="col-xs-5 pr15 pl5">
+            <input type="text" id="VerificationCode" name="UserName" placeholder="请输入验证码"/></div>
+        <div class="col-xs-4 pr15 pl5">
+            <button id="btnSendSMS">发送验证码</button>
+        </div>
+    </div>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-3 pl15 pr5">
+            <sapn class="pdtb10 display_block">新密码：</sapn>
         </div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
+            <input type="password" id="Pwd" name="Pwd" placeholder="请输入新密码"/></div>
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
-            <button id="btnLogin">登 录</button>
+            <button id="btnReg">确定</button>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <a href="Register.html">注册账号</a>
         </div>
         <div class="col-xs-6 text-right">
-            <a href="RetrievePassword.html">忘记密码？</a>
+            <a href="Login.html">已有账号登录》</a>
         </div>
     </div>
 </div>
@@ -79,6 +89,6 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
-<script src="../../Scripts/Login.js"></script>
+<script src="../../Scripts/Account/RetrievePassword.js"></script>
 </body>
 </html>
