--- a/Views/Admin/Phase/PhaseList.html
+++ b/Views/Admin/Phase/PhaseList.html
@@ -53,34 +53,18 @@
     <div class="row" style="padding: 10px;background: #e5e5e5">
         <div class="col-xs-12">
             <ul class="list-group" id="phase_list">
-                <li class="list-group-item header">
-                    <div class="row ">
-                        <div class="col-lg-2">阶段课程名称</div>
-                        <div class="col-lg-1">课程类型</div>
-                        <div class="col-lg-1">开始时间</div>
-                        <div class="col-lg-1">结束时间</div>
-                        <div class="col-lg-2">举办地址</div>
-                        <div class="col-lg-1">食宿费</div>
-                        <div class="col-lg-1">招生名额</div>
-                        <div class="col-lg-3">操作</div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row ">
-                        <div class="col-lg-2">阶段课程阶段课程名称阶段课程名称名称</div>
-                        <div class="col-lg-1">课程类型</div>
-                        <div class="col-lg-1">2016-12-13</div>
-                        <div class="col-lg-1">2016-12-13</div>
-                        <div class="col-lg-2">阶段课程阶段课程名称阶段课程名称名称</div>
-                        <div class="col-lg-1">250</div>
-                        <div class="col-lg-1">300/298</div>
-                        <div class="col-lg-3">
-                            <button>编辑</button>
-                            <button>删除</button>
-                            <button>预约列表</button>
-                        </div>
-                    </div>
-                </li>
+                <!--<li class="list-group-item header">-->
+                    <!--<div class="row ">-->
+                        <!--<div class="col-lg-2">阶段课程名称</div>-->
+                        <!--<div class="col-lg-1">课程类型</div>-->
+                        <!--<div class="col-lg-1">开始时间</div>-->
+                        <!--<div class="col-lg-1">结束时间</div>-->
+                        <!--<div class="col-lg-2">举办地址</div>-->
+                        <!--<div class="col-lg-1">食宿费</div>-->
+                        <!--<div class="col-lg-1">招生名额</div>-->
+                        <!--<div class="col-lg-3">操作</div>-->
+                    <!--</div>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
