阶段列表，新增，编辑

--- a/Views/Admin/Phase/PhaseList.html
+++ b/Views/Admin/Phase/PhaseList.html
@@ -45,8 +45,8 @@
             <h4><strong>阶段课程管理</strong></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
-            <button id="btnSearch">搜 索</button>
+            <!--<input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>-->
+            <!--<button id="btnSearch">搜 索</button>-->
             <button id="btnAdd" onclick="window.location.href='PhaseEdit.html'">新 增</button>
         </div>
     </div>
