--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -96,8 +96,6 @@
         <div class="col-xs-2">课程类型：</div>
         <div class="col-xs-6">
             <select type="text" id="CourseType">
-                <option value="1">学生课程</option>
-                <option value="2">家长课程</option>
             </select>
         </div>
     </div>
@@ -127,7 +125,7 @@
     </div>
     <div class="row">
         <div class="col-xs-2">开课地址：</div>
-        <div class="col-xs-6"><input type="text" id="Place"/></div>
+        <div class="col-xs-6"><input placeholder="地址不选即为待定" type="text" id="Place"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">食宿场地费：</div>
@@ -135,11 +133,11 @@
     </div>
     <div class="row">
         <div class="col-xs-2">开始日期：</div>
-        <div class="col-xs-6"><input type="text" class="laydate-icon" id="StartTime"/></div>
+        <div class="col-xs-6"><input placeholder="时间不选即为待定" type="text" class="laydate-icon" id="StartTime"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">结束日期：</div>
-        <div class="col-xs-6"><input class="laydate-icon" type="text" id="EndTime"/></div>
+        <div class="col-xs-6"><input placeholder="时间不选即为待定" class="laydate-icon" type="text" id="EndTime"/></div>
     </div>
     <div class="row">
         <div class="col-xs-2">
@@ -150,7 +148,7 @@
     </div>
 </div>
 
-<div id="TeacherBox">
+<div id="TeacherBox" style="display: none">
     <div class="container" style="width: 300px;height: 200px;" id="TeacherList">
         <!--<div class="row">-->
         <!--<div class="col-xs-1"><input style="width: 15px;height: 15px" name="teacher" type="checkbox"/></div>-->
