--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -15,6 +15,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/Course/Views/Admin/Course/CourseList.html">课程管理</a></li>
                 <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
+                <li><a href="/Course/Views/Admin/Teacher/TeacherList.html">教师管理</a></li>
                 <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
                 <!--<li><a href="/Course/Views/Admin/User/UserList.html">教师管理</a></li>-->
                 <!--<li class="dropdown">-->
