添加报名表及预约成功界面

--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -11,6 +11,7 @@
     li{
       list-style: none;
     }
+    body{background-color: #E6E6E6}
   </style>
  </head>
  
@@ -19,10 +20,12 @@
       <ul class="list">
       <li class="list-li">
          
+
       </li>
     </ul>
   </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+    <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Scripts/book/book.js"></script>
   </body>
