--- a/Css/book/book.css
+++ b/Css/book/book.css
@@ -5,7 +5,7 @@ table td, table th {
   padding: 5px;
 }
 ul {
-	padding-bottom: 5px;
+	padding-bottom: 15px;
 	padding-left: 5px;
 }
 
@@ -19,7 +19,9 @@ img {
 }
 
 .title {
-   background-color: #FF0000;
+   background-color: #FCFAFE;
+   color: #4A4A4A;
+   padding-top: 10px;
 }
 
 .name {
@@ -37,5 +39,15 @@ img {
 }
 .button {
 	margin-top: 10px;
-	background-image: url(../../Images/book/book_button_bg.png);
+    border: 0;
+    width: 80px;
+    outline: none;
+    border-radius: 2px;
+    background: #F24D4D;
+    color: #FFFFFF;
+}
+.button:active {
+
+    background: #9B9B9B;
+
 }
