修改阶段编辑输入框样式

--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -90,7 +90,10 @@
     </div>
     <div class="row">
         <div class="col-xs-2">期数：</div>
-        <div class="col-xs-6"><input type="text" id="Periods"/></div>
+        <div class="col-xs-6 input-group" style="padding-left: 15px; padding-right: 15px;">
+            <input type="text" id="Periods" class="form-control">
+            <span class="input-group-addon">期</span>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-2">课程类型：</div>
