--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -12,7 +12,10 @@
             width: 70px;
             height: 30px
         }
-        *{font-size: 13px!important;}
+
+        * {
+            font-size: 13px !important;
+        }
     </style>
 </head>
 <body>
@@ -24,10 +27,10 @@
             <h4><strong>阶段预约列表 — 摩英国际青少年领袖特训营一阶 12期</strong></h4>
         </div>
         <div class="col-xs-7 text-right">
-            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字" />
+            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button id="btnSearch">搜 索</button>
             <button id="btnAdd">手动录入</button>
-            <button id="btnInport">导出Excel</button>
+            <button id="btnImport">导出Excel</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
@@ -44,46 +47,55 @@
                         <div class="col-xs-1">状态</div>
                         <div class="col-xs-1">预约日期</div>
                         <div class="col-xs-1">增值服务</div>
-                        <div class="col-xs-2">操作</div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row ">
-                        <div class="col-xs-1"><a href="#">王兵</a></div>
-                        <div class="col-xs-1">男</div>
-                        <div class="col-xs-1">1992/09/25</div>
-                        <div class="col-xs-1">15901857927</div>
-                        <div class="col-xs-1"><a href="#">0.00</a></div>
-                        <div class="col-xs-1">三年二班</div>
-                        <div class="col-xs-1">预约成功</div>
-                        <div class="col-xs-1">2016/12/12</div>
-                        <div class="col-xs-1"><a href="#">查看</a></div>
-                        <div class="col-xs-3">
-                            <button>修改状态</button>
-                            <button>备注</button>
-                            <button>签到</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row ">
-                        <div class="col-xs-1"><a href="#">王斌</a></div>
-                        <div class="col-xs-1">男</div>
-                        <div class="col-xs-1">1992/09/25</div>
-                        <div class="col-xs-1">15901857927</div>
-                        <div class="col-xs-1"><a href="#">0.00</a></div>
-                        <div class="col-xs-1">三年二班</div>
-                        <div class="col-xs-1">预约成功</div>
-                        <div class="col-xs-1">2016/12/12</div>
-                        <div class="col-xs-1"><a href="#">查看</a></div>
-                        <div class="col-xs-3">
-                            <button>修改状态</button>
-                            <button>备注</button>
-                            <button>签到</button>
-                        </div>
+                        <div class="col-xs-3">操作</div>
                     </div>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <div id="Page"></div>
+        </div>
+    </div>
+</div>
+
+
+<div style="display: none;" id="moneyBox">
+    <div class="container" style="width: 260px;height: 120px;">
+        <div class="row">
+            <div class="col-xs-12">已交食宿费：</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12"><input type="text" id="money"/></div>
+        </div>
+    </div>
+</div>
+<div style="display: none;" id="classNameBox">
+    <div class="container" style="width: 260px;height: 120px;">
+        <div class="row">
+            <div class="col-xs-12">班级：</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12"><input type="text" id="className"/></div>
+        </div>
+    </div>
+</div>
+
+<!--1.预约中, 2.候补中, 3.预约成功, 4.已签到, 5.已退费-->
+<div style="display: none;" id="phaseStatusBox">
+    <div class="container" style="width: 260px;height: 120px;">
+        <div class="row">
+            <div class="col-xs-12">选择状态：</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <select style="width: 100%;height: 40px;">
+                    <option value="3">预约成功</option>
+                    <option value="4">已签到</option>
+                    <option value="4">已退费</option>
+                </select>
+            </div>
         </div>
     </div>
 </div>
@@ -92,6 +104,7 @@
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
+<script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
 <script src="../../../Scripts/Admin/PhaseOrder.js"></script>
 </body>
 </html>
