--- a/Views/index.html
+++ b/Views/index.html
@@ -11,7 +11,9 @@
 <!--js引用-->
 <script src="../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../Framework/jquery-cookies/jquery.cookie.js"></script>
-<script src="../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../Scripts/Commen/CourseCommen.js"></script>
+<script>
+    window.location.href = "Account/Login.html";
+</script>
 </body>
 </html>
