--- a/Views/Account/PersonalCenter.html
+++ b/Views/Account/PersonalCenter.html
@@ -159,7 +159,8 @@
     </div>
 </div>
 <!--navbar-fixed-bottom-->
-<div class="container navbar-fixed-bottom">
+<div style="height: 60px;width: 100%;"></div>
+<div class="container navbar-fixed-bottom" style="background: #FFF;">
     <div class="row" style="border-top: 1px solid #EEEEEE;">
         <div  class="col-xs-4" style="height: 50px;line-height: 50px;">
             <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
