我的预约列表添加接口及页面逻辑

--- a/Css/book/book.css
+++ b/Css/book/book.css
@@ -10,7 +10,7 @@ ul {
 }
 
 .list {
-	padding-left: 0px
+	padding-left: 0px;
 }
 
 img {
@@ -47,7 +47,7 @@ img {
     color: #FFFFFF;
 }
 .button:active {
-
+	
     background: #9B9B9B;
 
 }
