--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -7,11 +7,13 @@
 	<meta name="author" content="vjchu">
 	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../../Css/book/book.css">
+  
+
   <style type="text/css">
     li{
       list-style: none;
     }
-    body{background-color: #E6E6E6}
+    body{background-color: #FFFFFF}
   </style>
  </head>
  
@@ -26,6 +28,7 @@
   </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+    <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Scripts/book/book.js"></script>
   </body>
