阶段预约查看详情

--- a/Views/Admin/User/UserEdit.html
+++ b/Views/Admin/User/UserEdit.html
@@ -62,8 +62,8 @@
         <div class="col-lg-2"> 性别：</div>
         <div class="col-lg-6">
             <select type="text" id="Sex">
-                <option value="1">男</option>
-                <option value="2">女</option>
+                <option value="男">男</option>
+                <option value="女">女</option>
             </select>
         </div>
     </div>
