--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -152,7 +152,7 @@
 </div>
 
 <div id="TeacherBox" style="display: none">
-    <div class="container" style="width: 300px;height: 200px;" id="TeacherList">
+    <div class="container" style="width: 300px;height: 200px;overflow-y: scroll;" id="TeacherList">
         <!--<div class="row">-->
         <!--<div class="col-xs-1"><input style="width: 15px;height: 15px" name="teacher" type="checkbox"/></div>-->
         <!--<div class="col-xs-10">呜呜呜呜</div>-->
