修改前端报名系统的页面

--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -2,7 +2,10 @@
 <html>
   <head>
 	<title>登录界面</title>
-	<meta charset="utf-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+      <meta name="format-detection" content="telephone=no"/>
+      <meta name="format-detection" content="email=no"/>
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
 	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
@@ -26,6 +29,21 @@
       </li>
     </ul>
   </div>
+    <!--navbar-fixed-bottom-->
+    <div style="height: 60px;width: 100%;"></div>
+    <div class="container navbar-fixed-bottom" style="background: #FFF;">
+        <div class="row" style="border-top: 1px solid #EEEEEE;">
+            <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
+                <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
+            </div>
+            <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+                <a style="color: #F24C4C;" href="/Course/Views/book/booking.html">我的预约</a>
+            </div>
+            <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+                <a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
+            </div>
+        </div>
+    </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
