--- a/Views/Account/ChangePassword.html
+++ b/Views/Account/ChangePassword.html
@@ -64,16 +64,18 @@
         </div>
     </div>
 </div>
-<div class="container navbar-fixed-bottom">
+<!--navbar-fixed-bottom-->
+<div style="height: 60px;width: 100%;"></div>
+<div class="container navbar-fixed-bottom" style="background: #FFF;">
     <div class="row" style="border-top: 1px solid #EEEEEE;">
-        <div  class="col-xs-4" style="height: 50px;line-height: 50px;">
+        <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
             <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
         </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;">
+        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
             <a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>
         </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;">
-            <a style="color: #F24C4C;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
+        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+            <a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
         </div>
     </div>
 </div>
