--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>报名信息</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+	<meta name="format-detection" content="telephone=no"/>
+	<meta name="format-detection" content="email=no"/>
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
 	<link rel="stylesheet" type="text/css" href="../../Css/book/sign.css">
