准备合并dev分支

--- a/Views/Admin/User/UserInfoEntry.html
+++ b/Views/Admin/User/UserInfoEntry.html
@@ -142,5 +142,6 @@
 <script src="../../../Framework/summernote/summernote.min.js"></script>
 <script src="../../../Framework/summernote/lang/summernote-zh-CN.js"></script>
 <script src="../../../Framework/laydate-v1.1/laydate/laydate.js"></script>
+<script src="../../../Scripts/Admin/UserInfoEntry.js"></script>
 </body>
 </html>
