--- a/Views/transfer/transfer.html
+++ b/Views/transfer/transfer.html
@@ -19,7 +19,7 @@
   				<p class="p">已预约课程</p>
   			</div>
   			<div class="col-xs-8">
-
+         <p id="my-course"></p>
   			</div>
   		</div>
   		<div class="row">
@@ -27,18 +27,20 @@
   				<p class="p">可转期课程</p>
   			</div>
   			<div class="col-xs-8">
-          
+           <button id="course-list"></button>
   			</div>
   		</div>
   	</div>
-
+    
     <center>
-      <button class="sureButton">确认修改</button>
+      <button id="sureButton">确认修改</button>
     </center>
     
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+    <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
-    
+    <script src="../../Scripts/transfer/transfer.js"></script>
+
 </body>
 </html>
