--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -5,10 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
+  <meta http-equiv="Content-Type" content="textml; charset=utf-8"/>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="format-detection" content="email=no"/>
 	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../../Css/book/book.css">
-  
-
   <style type="text/css">
     li{
       list-style: none;
@@ -21,7 +23,7 @@
     <div id="contacts">
       <ul class="list">
       <li class="list-li">
-         
+          
 
       </li>
     </ul>
