学生录入界面逻辑基本完成

--- a/Views/Admin/User/UserInfoEntry.html
+++ b/Views/Admin/User/UserInfoEntry.html
@@ -77,14 +77,26 @@
         <div class="col-xs-2">体验名额</div>
         <div class="col-xs-6 checkbox">
             <label>
-                <input class="service" type="checkbox" value="">是否为体验名额
+                <input class="service" type="checkbox" value="0" id="isExperience">是否为体验名额
             </label>
         </div>
     </div>
-    <div class="row">
+    <div class="row" id="Tuition">
         <div class="col-xs-2">已交学费</div>
         <div class="col-xs-6">
             <input type="text" class="form-control" id="TuitionFeesPaid">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">本阶段已交食宿费</div>
+        <div class="col-xs-6">
+            <input type="text" class="form-control" id="AccommodationFeesPaid">
+        </div>
+    </div>
+    <div class="row" id="Parents">
+        <div class="col-xs-2">亲子课程参加人数</div>
+        <div class="col-xs-6">
+            <input type="text" class="form-control" id="ParentsCount">
         </div>
     </div>
     <div class="row" id="service">
