完善预约，报名表功能

--- a/Css/book/sign.css
+++ b/Css/book/sign.css
@@ -14,6 +14,9 @@
 	font-weight:bold;
 	margin-top: 10px;
 }
+.top-text {
+	font-size: 12px;
+}
 
 .zengzhi_title {
 	margin-left: 10px;
@@ -38,7 +41,7 @@
 	background-color: #FFFFFF;
 }
 
-#input {
+.input {
 	margin-top: 10px;
 }
 
@@ -54,7 +57,7 @@
 .sureButton {
 	margin-left: 20px;
 	margin-right: 20px;
-	width: 95%;
+	width: 90%;
 	height: 44px;
 	margin-top: 10px;
 	border-radius: 4px;
