修改报名表界面逻辑

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -187,7 +187,7 @@
           </label>
         </div>
 	</div>
-
+	
 	<div class="sure">
 		<center>
 	      <button id="sureButton" class="sureButton">确认信息</button>
@@ -198,6 +198,7 @@
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
+    <script src="../../Framework/layer-v2.4/layer/layer.js"></script>
     <script src="../../Scripts/book/sign.js"></script>
 
 </body>
