--- a/Views/Admin/Course/CourseRegistrationList.html
+++ b/Views/Admin/Course/CourseRegistrationList.html
@@ -48,6 +48,16 @@
             </ul>
         </div>
     </div>
+    <div style="display: none;" id="Tuition">
+        <div class="container" style="width: 260px;height: 120px;">
+            <div class="row">
+                <div class="col-xs-12">已交学费：</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12"><input type="text" id="TuitionFeesPaid"/></div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
