--- a/Views/Appointment/CourseDetials.html
+++ b/Views/Appointment/CourseDetials.html
@@ -36,6 +36,9 @@
             color: #fff;
             outline: none;
         }
+        #Detials img {
+            width:100%!important;
+        }
     </style>
 </head>
 <body>
