--- a/Views/book/booksuccess.html
+++ b/Views/book/booksuccess.html
@@ -6,14 +6,17 @@
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
 	  <link rel="stylesheet" type="text/css" href="../../Css/book/booksuccess.css">
+
+
 </head>
 <body>
-	<div align="center">
-	   <img class="img" src="../../Images/book/book_success.png">
-	</div>
+<div id="img">
+	<img src="../../Images/book/book_success.png">
+</div>
 
 	<div align="center">
 		<p>你已经预约该课程，工作人员会在一个工作日内联系您</p>
 	</div>
 </body>
 </html>
+<!-- ../../Images/book/book_success.png -->
