--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -9,36 +9,39 @@
 	<meta name="format-detection" content="email=no"/>
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
-
+	
 	<link rel="stylesheet" type="text/css" href="../../Css/book/sign.css">
 	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
-	 <style type="text/css">
-    li{
-      list-style: none;
-    }
-    body{background-color: #E6E6E6}
+	<style type="text/css">
+    
   </style>
 </head>
 <body>
-	<div class="top">
-		<div align="center"><h3>摩英青少年领袖特训营</h3></div>
+	<div class="top" style="margin-top: 0">
+		<div style="text-align: center;" ><h3>摩英青少年领袖特训营</h3></div>
 		<div class="container">
-
+			
+		</div>
+	</div>
+	<div class="phase">
+		<p class="title">请选择您的期数</p>
+		<div class="phase_container">
+			
 		</div>
 	</div>
 	<div class="sign">
 		<p class="title">报名信息</p>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">学员手机</p></div>
-			<div class="col-xs-8"><input class="input" id="tel" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="tel" type="text" ></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">电子邮件</p></div>
-			<div class="col-xs-8"><input class="input" id="email" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="email" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">学员姓名</p></div>
-			<div class="col-xs-8"><input class="input" id="name" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="name" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">性别</p></div>
@@ -57,20 +60,20 @@
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">就读学校</p></div>
-			<div class="col-xs-8"><input class="input" id="school" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="school" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">就读年级</p></div>
-			<div class="col-xs-8"><input class="input" id="grade" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="grade" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">就读班级</p></div>
-			<div class="col-xs-8"><input class="input" id="class" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="class" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">出生日期</p></div>
 			<div class="col-xs-8">
-				<input class="input" id="birth" type="text" name="tel">
+				<input class="input" id="birth" type="text">
 				<p style="color: gray">例如:2001-01-01</p>
 			</div>
 		</div>
@@ -79,27 +82,27 @@
 	<div class="other">
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">父亲姓名</p></div>
-			<div class="col-xs-8"><input class="input" id="f_name" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="f_name" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">父亲手机</p></div>
-			<div class="col-xs-8"><input class="input" id="f_tel" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="f_tel" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">母亲姓名</p></div>
-			<div class="col-xs-8"><input class="input" id="m_name" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="m_name" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">母亲手机</p></div>
-			<div class="col-xs-8"><input class="input" id="m_tel" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="m_tel" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">宅电</p></div>
-			<div class="col-xs-8"><input class="input" id="telephone" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">快递详细地址</p></div>
-			<div class="col-xs-8"><input class="input" id="address" type="text" name="tel"></div>
+			<div class="col-xs-8"><input class="input" id="address" type="text"></div>
 		</div>
 		<div id="text_row" class="row">
 			<div class="col-xs-4"><p class="text">填表人</p></div>
@@ -149,7 +152,7 @@
 	</div>
 
 	<div class="zengzhi">
-		<p class="zengzhi_title">请选择您的增值服务</p>
+		<!-- <p class="zengzhi_title">请选择您的增值服务</p>
 		<div class="radio">
             <label>
                 <input type="radio" name="radio_server" value="1">
@@ -185,7 +188,7 @@
             <input type="radio" name="radio_server" value="0" checked="checked">
             <p>不需要此项服务</p>
           </label>
-        </div>
+        </div> -->
 	</div>
 	
 	<div class="sure">
