--- a/Views/transfer/transfer.html
+++ b/Views/transfer/transfer.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="format-detection" content="email=no"/>
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
-    <link rel="stylesheet" type="text/css" href="../../Css/transfer/transfer.css">
+  <link rel="stylesheet" type="text/css" href="../../Css/transfer/transfer.css">
 	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
 	<title>转期课程</title>
 </head>
