--- a/Views/Account/PersonalCenter.html
+++ b/Views/Account/PersonalCenter.html
@@ -57,6 +57,18 @@
             height: 20px !important;
             line-height: 20px !important;
         }
+
+        .exit {
+            padding: 10px;
+            border: 0px;
+            margin-top: 10px;
+            background-color: #F24D4D;
+            text-align: center;
+            font-size: 16px;
+            color: white;
+            border-radius: 5px;
+        }
+
     </style>
 </head>
 <body>
@@ -157,6 +169,7 @@
         <div class="col-xs-7 pr15 pl5 text-right">
             <span class="color_gray" id="address"></span></div>
     </div>
+    <div class="exit" id="exit">退出登录</div>
 </div>
 <!--navbar-fixed-bottom-->
 <div style="height: 60px;width: 100%;"></div>
@@ -178,6 +191,7 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/Account/PersonalCenter.js"></script>
 </body>
 </html>
