--- a/Views/book/booksuccess.html
+++ b/Views/book/booksuccess.html
@@ -11,12 +11,16 @@
 </head>
 <body>
 <div id="img">
-	<img src="../../Images/book/book_success.png">
+	<img id="image" src="../../Images/book/book_success.png">
 </div>
 
 	<div align="center">
-		<p>你已经预约该课程，工作人员会在一个工作日内联系您</p>
+		<p class="result">你已经预约该课程，工作人员会在一个工作日内联系您</p>
 	</div>
+
+    <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+    <script src="../../Scripts/book/booksuccess.js"></script>
+
 </body>
 </html>
 <!-- ../../Images/book/book_success.png -->
