--- a/Views/transfer/transfer.html
+++ b/Views/transfer/transfer.html
@@ -41,6 +41,7 @@
     
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+    <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
     <script src="../../Scripts/transfer/transfer.js"></script>
