--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -60,7 +60,7 @@
         <div class="col-xs-5 pr15 pl5">
             <input type="text" id="VerificationCode" name="UserName" placeholder="请输入验证码"/></div>
         <div class="col-xs-4 pr15 pl5">
-            <button id="btnSendSMS">发送验证码</button>
+            <button id="btnSendSMS" style="font-size: 12px;">发送验证码</button>
         </div>
     </div>
     <div class="row pdtb15 border_btm">
