--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -49,6 +49,7 @@
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
+    <script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Scripts/book/book.js"></script>
   </body>
