--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -200,7 +200,7 @@
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
-    <script src="../../Framework/layer-v2.4/layer/layer.js"></script>
+	<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/book/sign.js"></script>
 
 </body>
