--- a/Views/Account/RetrievePassword.html
+++ b/Views/Account/RetrievePassword.html
@@ -101,6 +101,7 @@
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Scripts/Account/RetrievePassword.js"></script>
 </body>
