--- a/Views/Appointment/CourseDetials.html
+++ b/Views/Appointment/CourseDetials.html
@@ -69,6 +69,7 @@
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Scripts/Appointment/CourseDetials.js"></script>
