--- a/Views/Appointment/CourseList.html
+++ b/Views/Appointment/CourseList.html
@@ -97,6 +97,7 @@
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Scripts/Appointment/CourseList.js"></script>
 </body>
