修改新增用户页面bug

--- a/Views/Admin/User/UserEdit.html
+++ b/Views/Admin/User/UserEdit.html
@@ -103,7 +103,7 @@
                 <span class="input-group-addon">
                     <input name="dan" value="1" type="radio" style="width: 16px ; height: 16px" checked="checked">
                 </span>
-                <input type="text" class="form-control" id="Phone2">
+                <input type="text" class="form-control" id="Phone2" placeholder="选中的手机号为账号">
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
                 <span class="input-group-addon">
                     <input name="dan" value="2" type="radio" style="width: 16px ; height: 16px">
                 </span>
-                <input type="text" class="form-control" id="FatherPhone2">
+                <input type="text" class="form-control" id="FatherPhone2" placeholder="选中的手机号为账号">
             </div>
         </div>
     </div>
@@ -147,7 +147,7 @@
                 <span class="input-group-addon">
                     <input name="dan" type="radio" value="3" style="width: 16px ; height: 16px">
                 </span>
-                <input type="text" class="form-control" id="MotherPhone2">
+                <input type="text" class="form-control" id="MotherPhone2" placeholder="选中的手机号为账号">
             </div>
         </div>
     </div>
